feat: Refactor terrain brush tool and update project structure

--- a/Source/Project.csproj
+++ b/Source/Project.csproj
@@ -6,6 +6,7 @@
     <OutputPath>../Assemblies/</OutputPath>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>latest</LangVersion>
+    <AssemblyName>brushtool</AssemblyName>
   </PropertyGroup>
   
   <ItemGroup>
